with aos and seo

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abdulaziz's Portfolio</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  </head>
-  <body>
+    <meta name="description" content="Abdulaziz's official portfolio website built with React, Tailwind, and Vite. Check out my projects!">
+    <meta name="keywords" content="Abdulaziz, portfolio, React, Tailwind, web developer, frontend">
+    <meta name="author" content="Abdulaziz">
+  
+    <!-- Social sharing (OG tags) -->
+    <meta property="og:title" content="Abdulaziz's Portfolio" />
+    <meta property="og:description" content="React & Tailwind based personal portfolio of Abdulaziz" />
+    <meta property="og:image" content="https://figmapp.vercel.app/your_preview_image.png" />
+    <meta property="og:url" content="https://figmapp.vercel.app/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    </head>
+    <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
