--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="https://figmapp.vercel.app/your_preview_image.png" />
     <meta property="og:url" content="https://figmapp.vercel.app/" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="google-site-verification" content="865IegZ1gnDo539dymbk6UEbCA6iL8eoNmM82CCYgC0" />
     </head>
     <body>
     <div id="root"></div>
